--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "<br/> <br/>",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "cypress:open": "cypress open"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,9 @@
   "homepage": "https://github.com/wongil12/js-calculator#readme",
   "devDependencies": {
     "cypress": "^9.6.0"
+  },
+  "dependencies": {
+    "ejs": "^3.1.7",
+    "express": "^4.18.1"
   }
 }
